Ntop host details: Several UI fixes
* Prevent pie chart labels from overlapping
* Remove redundant table cell within the application tab
* Improve positioning of dropdown filters in the flows tab
* Make the flows table slimmer
* Highlight tabs on hover

--- a/web/htdocs/themes/facelift/scss/_cmk_figures.scss
+++ b/web/htdocs/themes/facelift/scss/_cmk_figures.scss
@@ -27,8 +27,13 @@ div.cmk_tab {
       font-weight: bold;
       line-height: 2rem;
       text-align: center;
+      cursor: pointer;
       border-bottom: 2px solid transparent;
       transition: border-bottom 0.5s;
+
+      &:hover {
+        background-color: $table-highlight-color;
+      }
     }
 
     li.active {
@@ -344,4 +349,8 @@ div.dc_table .options {
       }
     }
   }
+}
+
+.dc-chart g.row text {
+  fill: $font-color;
 }
